# spreden

./: .gitmodules  CMakeLists.txt  LICENSE
contrib/: CMakeLists.txt
contrib/jsmn/: CMakeLists.txt
src/: CMakeLists.txt  db.c  list.c  list.h  main.c  rc.c  spreden.c  spreden.h  week.c
src/database/: CMakeLists.txt  database.h  db.c  parse_teams.c  scan.c
src/dstruct/: CMakeLists.txt  list.c
src/runcontrol/: CMakeLists.txt  rc.c
